--- a/web/themes/gavias_financial/templates/node/node--team.html.twig
+++ b/web/themes/gavias_financial/templates/node/node--team.html.twig
@@ -40,6 +40,7 @@
     <div class="team-name clearfix">
       <div class="name">{{ node.field_team_name.value|e }}</div>
       <div class="job">{{ node.field_team_position.value|e }}</div>
+      <div class="content-inner">{{ content.field_team_contact }}</div>
       <div class="line"><span class="one"></span><span class="second"></span><span class="three"></span></div>
     </div> 
     <div class="team-description">{{ content.field_team_description }}</div>
@@ -49,37 +50,16 @@
           <div class="team-image">{{ content.field_team_image }}</div>
         </div>
         <div class="col-lg-8 col-sm-12 col-xs-12">
-          <div class="team-contact">
-            <div class="heading">{{ 'Contact Info'|t }}</div>
-            <div class="content-inner">{{ content.field_team_contact }}</div>
-            <div class="socials">
-              {% for item in node.field_team_social %}
-                <a class="gva-social" href="{{ item.getFieldCollectionItem().field_team_social_link.value|e }}">
-                  <i class="{{ item.getFieldCollectionItem().field_team_social_icon.value|e }}"></i>
-                </a>
-              {% endfor %} 
-            </div>
-          </div>
-          <div class="team-education">
-            <div class="heading">{{ 'Education'|t }}</div>
-            <div class="content-inner">{{ content.field_team_education }}</div>
+          <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
+            {{ content|without('field_team_name', 'field_team_contact', 'field_team_image', 'field_team_contact', 'field_team_quote', 'field_team_social', 'field_team_education', 'field_team_position', 'field_team_email', 'field_team_description', 'comment') }}
           </div>
         </div>
       </div>
     </div> 
-
-    <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
-      {{ content|without('field_team_name', 'field_team_contact', 'field_team_image', 'field_team_contact', 'field_team_quote', 'field_team_social', 'field_team_education', 'field_team_position', 'field_team_email', 'field_team_description', 'comment') }}
+    <div class="team-education">
+      <div class="heading">{{ 'Responsibilities'|t }}</div>
+      <div class="content-inner">{{ content.field_team_education }}</div>
     </div>
-
-    <div class="team-quote"> {{content.field_team_quote}} </div>
-
-    {% if content.comment %}
-      <div id="node-single-comment">
-        {{ content.comment }}
-      </div>
-    {% endif %}  
-
   </div>
 </article>
 
